--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Davids Kundsida</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <h1>Kundhemsidan</h1>
     <p>här händer det grejer!</p>
-    
 </body>
 </html>
