added main with flexbox

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Davids Kundsida</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
-    <h1>Kundhemsidan</h1>
-    <p>här händer det grejer!</p>
+    <main>
+        <h1>Kundhemsidan</h1>
+        <p>Här händer det grejer! / David</p>
+    </main>
 </body>
 </html>
