--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Davids Kundsida</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Davids Webbshop</title>
+    <link rel="stylesheet" href="css/style.css" type="style/text">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
-        <h1>Kundhemsidan</h1>
-        <p>Här händer det grejer! / David</p>
+        <h1>Webshopp</h1>
+
+        <section>
+            <h2></h2>
+            <div id="product-list">Div med Javascript</div>
+        </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
