--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Webshop</h1>
         <section>
             <h2>Produkter</h2>
-            <div id="product-list">
+            <div id="productsContainer">
                 <!-- Fyller på från Javascript -->
             </div>
         </section>
