--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <header>Header</header>
         <h1>Webshop</h1>
         <section>
-            <h2>Produkter</h2>
+            <h2>Cookies</h2>
             <div id="productsContainer">
                 <!-- Fyller på från Javascript -->
             </div>
+            <h2>Cart</h2>
+            <div id="cartContainer"></div>
         </section>
     </main>
     <script src="script.js"></script>
