added sorting buttons and script for price and rating

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1>Webshop</h1>
         <section>
             <h2>Cookies</h2>
+            <button id="sortByNameBtn">Sortera efter namn</button>
+            <button id="sortByPriceBtn">Sortera efter pris</button>
+            <button id="sortByRatingBtn">Sortera efter rating</button>
             <div id="productsContainer">
                 <!-- Fyller på från Javascript -->
             </div>
