styled product input field

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <span>Nyhetsbrev</span>
                     <input type="checkbox" name="checknews">
                 </label>
-                <input class="reset" id="resetform" type="reset" value="Reset">
-                <input class="submit" type="submit" name="submit" value="Make Purchase" disabled>
+                <input class="reset" id="resetFormBtn" type="reset" value="Reset">
+                <input class="submit" id="purchaseBtn" type="submit" value="Make Purchase" disabled>
             </form>
         </section>
         <footer></footer>
