fixed tabbing focus on product buttons

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <span>Nyhetsbrev</span>
                     <input type="checkbox" name="checknews">
                 </label>
-                <input class="reset" id="resetFormBtn" type="reset" value="Reset">
+                <input class="reset" id="resetAllBtn" type="reset" value="Reset">
                 <input class="submit" id="purchaseBtn" type="submit" value="Make Purchase" disabled>
             </form>
         </section>
