--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
                 <button class="sorting-btn" id="sortByPriceBtn">Sortera efter pris</button>
                 <button class="sorting-btn" id="sortByRatingBtn">Sortera efter rating</button>
             </div>
+            <div class="category-radios">
+                <label>
+                    <span>Salty</span>
+                    <input type="radio" name="categoryFilter" id="saltyRadio" value="saltyCat">
+                </label>
+                <label>
+                    <span>Sweet</span>
+                    <input type="radio" name="categoryFilter" id="sweetRadio" value="sweetCat">
+                </label>
+                <label>
+                    <span>Vegan</span>
+                    <input type="radio" name="categoryFilter" id="veganRadio" value="veganCat">
+                </label>
+            </div>
+            <label>
+                <span>Price Slider</span>
+                <input type="range" name="priceRange" id="priceRange"  value="100" min="0" max="300">
+                <span id="currentRangeValue">100</span>kr
+            </label>
             <div id="productsContainer">
                 <!-- Fyller på från Javascript -->
             </div>
