added Card &  invoice radio buttons with  visibility & validation

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="invoice hidden" id="invoice">
                         <label>
                             <span>Personnummer</span>
-                            <input type="number" name="personal-id" id="personalID">
+                            <input type="text" name="personal-id" id="personalID">
                         </label>
                       </div>
                     <div class="card" id="card">
