added card validation

--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
                     <div class="invoice hidden" id="invoice">
                         <label>
                             <span>Personnummer</span>
-                            <input type="text" name="personal-id" id="personalID">
+                            <input type="text" name="personal-id" id="personalID" value="19930721-5914">
                         </label>
                       </div>
                     <div class="card" id="card">
                         <label>
                             <span>Kortnummer</span>
-                            <input type="number" id="creditCardNumber">
+                            <input type="number" id="creditCardNumber" value="5100080000000000">
                         </label>
                         <label>
                             <span>Datum</span>
                             <span>
-                                <input type="number" class="small" placeholder="YY" id="creditCardYear">/<input type="number" class="small" placeholder="MM" id="creditCardMonth">
+                                <input type="number" class="small" placeholder="YY" id="creditCardYear" value="29">/<input type="number" class="small" placeholder="MM" id="creditCardMonth" value="11">
                             </span>
                         </label>
                         <label>
                             <span>CVC</span>
-                            <input type="number" placeholder="123" id="creditCardCvc">
+                            <input type="number" placeholder="123" id="creditCardCvc" value="259">
                         </label>
                       </div>
                 </div>
