--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 </head>
 <body>
     <main>
-        <header></header>
+        <header>
+            <div class="cart-container">
+                <span class="material-symbols-outlined cart-icon">shopping_bag</span>
+                <div class="cart-amount-container" id="cartIconAmountContainer">
+                    <!-- Fyll på genom script -->
+                </div>
+            </div>
+        </header>
         <h1>Webshop</h1>
         <section>
             <h2>Cookies</h2>
@@ -112,7 +120,7 @@
                         <label>
                             <span>Datum</span>
                             <span>
-                                <input type="number" class="small" placeholder="YY" id="creditCardYear" value="29">/<input type="number" class="small" placeholder="MM" id="creditCardMonth" value="11">
+                                <input type="number" class="small" placeholder="YY" id="creditCardYear" value="24">/<input type="number" class="small" placeholder="MM" id="creditCardMonth" value="11">
                             </span>
                         </label>
                         <label>
