--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <section>
             <h2>Cookies</h2>
             <div>
-                <button class="sorting-btn" id="sortByNameBtn">Sortera efter namn</button>
-                <button class="sorting-btn" id="sortByPriceBtn">Sortera efter pris</button>
-                <button class="sorting-btn" id="sortByRatingBtn">Sortera efter rating</button>
+                <button class="sorting-btn" id="sortByNameBtn">Namn</button>
+                <button class="sorting-btn" id="sortByPriceBtn">Pris</button>
+                <button class="sorting-btn" id="sortByRatingBtn">Rating</button>
             </div>
             <div class="category-radios">
                 <label>
@@ -59,7 +59,7 @@
             <h2>Cart</h2>
             <div id="cartContainer"></div>
         </section>
-        <section>
+        <section class="checkout-section">
             <h2>Check Out</h2>
             <form>
                 <label>
@@ -106,24 +106,24 @@
                             <span>Kort</span>
                         </label>
                     </div>
-                    <div class="invoice hidden" id="invoice">
-                        <label>
+                    <div class="option invoice hidden" id="invoice">
+                        <label class="payment-input">
                             <span>Personnummer</span>
                             <input type="text" name="personal-id" id="personalID" value="19930721-5914">
                         </label>
                       </div>
-                    <div class="card" id="card">
-                        <label>
+                    <div class="option card" id="card">
+                        <label class="payment-input">
                             <span>Kortnummer</span>
                             <input type="number" id="creditCardNumber" value="5100080000000000">
                         </label>
-                        <label>
+                        <label class="payment-input">
                             <span>Datum</span>
                             <span>
                                 <input type="number" class="small" placeholder="YY" id="creditCardYear" value="24">/<input type="number" class="small" placeholder="MM" id="creditCardMonth" value="11">
                             </span>
                         </label>
-                        <label>
+                        <label class="payment-input">
                             <span>CVC</span>
                             <input type="number" placeholder="123" id="creditCardCvc" value="259">
                         </label>
