added tablet and desktop styling with grid

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <h2>Cookies</h2>
-            <div id="productsContainer">
+            <div id="productsContainer" class="products-container">
                 <!-- Fyller på från Javascript -->
             </div>
         </section>
