--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Davids Cookies</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -55,7 +55,7 @@
                     <label>
                         <span>Price Interval</span>
                         <input type="range" name="priceRange" id="priceRange" value="900" min="0" max="900" step="10">
-                        <span id="currentRangeValue">900</span> kr
+                        <span id="currentRangeValue">900 kr</span>
                     </label>
                 </div>
             </div>
@@ -66,7 +66,7 @@
         </section>
         <section class="cart-section">
             <h2>Cart</h2>
-            <div id="cartContainer">
+            <div class="cart-container" id="cartContainer">
                 <!-- Fyll från Javascript -->
             </div>
         </section>
@@ -87,7 +87,7 @@
                 </label>
                 <label>
                     <span>Zip Code</span>
-                    <input type="number" name="zipcode" placeholder="123 45"required class="long-input">
+                    <input type="number" name="zipcode" placeholder="12345" required class="long-input">
                 </label>
                 <label>
                     <span>Town</span>
