--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div>
                     <label>
                         <span>Price Interval</span>
-                        <input type="range" name="priceRange" id="priceRange" value="900" min="0" max="900" step="10">
-                        <span id="currentRangeValue">900 kr</span>
+                        <input type="range" name="priceRange" id="priceRange" value="900" min="10" max="50" step="10">
+                        <span id="currentRangeValue">50 kr</span>
                     </label>
                 </div>
             </div>
@@ -125,15 +125,15 @@
                     </div>
                     <div class="option card" id="card">
                         <label class="payment-input">
-                            <span>Kortnummer</span>
+                            <span>Card Number</span>
                             <input type="number" id="creditCardNumber" value="5100080000000000" class="long-input">
                         </label>
                         <label class="payment-input">
-                            <span>Datum</span>
+                            <span>Year / Month</span>
                             <span>
-                                <input type="number" class="small-input" placeholder="YY" id="creditCardYear"
-                                    value="24">/<input type="number" class="small-input" placeholder="MM"
-                                    id="creditCardMonth" value="11">
+                                <input type="number" class="small-input" placeholder="YY" id="creditCardYear" value="24">
+                                /
+                                <input type="number" class="small-input" placeholder="MM" id="creditCardMonth" value="11">
                             </span>
                         </label>
                         <label class="payment-input">
@@ -147,11 +147,11 @@
                     <input type="text" name="discountcode" id="discountcode" class="long-input">
                 </label>
                 <label>
-                    <span>Accept perssonal info</span>
+                    <span>Approval of processing of personal data</span>
                     <input type="checkbox" name="checkterms" required>
                 </label>
                 <label>
-                    <span>Nyhetsbrev</span>
+                    <span>Apply for our newsletter</span>
                     <input type="checkbox" name="checknews" checked>
                 </label>
                 <input class="reset" id="resetAllBtn" type="reset" value="Reset">
@@ -160,7 +160,7 @@
         </section>
 
         <section class="confirmation" id="confirmation">
-            <p>Thanks for your purchase! Ingen funktion ännu</p>
+            <p>Thanks for your purchase! No function yet!</p>
             <button id="close-confirmation">Close</button>
         </section>
 
