--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
         </section>
         <section class="checkout-section">
             <h2>Check Out</h2>
-            <form id="purchase-form">
+            <form id="purchaseForm">
                 <label>
                     <span>Name</span>
-                    <input type="text" name="name" placeholder="Name" required class="long-input">
+                    <input id="nameInput" type="text" name="name" placeholder="Name" value="name" required class="long-input">
                 </label>
                 <label>
                     <span>Lastname</span>
-                    <input type="text" name="lastname" placeholder="Lastname" required class="long-input">
+                    <input id="lastnameInput" type="text" name="lastname" placeholder="Lastname" value="lastname" required class="long-input">
                 </label>
                 <label>
-                    <span>Adress</span>
-                    <input type="text" name="adress" placeholder="Street 1B" required class="long-input">
+                    <span>Address</span>
+                    <input id="addressInput" type="text" name="address" placeholder="Street 1B" value="street 1" required class="long-input">
                 </label>
                 <label>
                     <span>Zip Code</span>
-                    <input type="number" name="zipcode" placeholder="12345" required class="long-input">
+                    <input id="zipCodeInput" type="number" name="zipcode" placeholder="12345" value="12345" required class="long-input">
                 </label>
                 <label>
                     <span>Town</span>
-                    <input type="text" name="town" placeholder="Town" required class="long-input">
+                    <input id="townInput" type="text" name="town" placeholder="Town" value="Town" required class="long-input">
                 </label>
                 <label>
                     <span>Door Code <i>Optional</i></span>
@@ -99,11 +99,11 @@
                 </label>
                 <label>
                     <span>Phone</span>
-                    <input type="tel" id="phone" name="phone" placeholder="555-0505000" required class="long-input">
+                    <input id="phoneInput" type="tel" id="phone" name="phone" placeholder="555-0505000" value="555-0505000" required class="long-input">
                 </label>
                 <label>
                     <span>Email</span>
-                    <input type="email" name="email" placeholder="email@mail.com" required class="long-input">
+                    <input id="emailInput" type="email" name="email" placeholder="email@mail.com" value="email@mail.com" required class="long-input">
                 </label>
                 <div class="payment-method">
                     <div class="selector">
@@ -148,7 +148,7 @@
                 </label>
                 <label>
                     <span>Approval of processing of personal data</span>
-                    <input type="checkbox" name="checkterms" required>
+                    <input id="termsCheckbox" type="checkbox" name="checkterms" required>
                 </label>
                 <label>
                     <span>Apply for our newsletter</span>
